Closed
Bug 1090518
Opened 11 years ago
Closed 11 years ago
Crash during WebGL Conformance Tests - /extensions/webgl-depth-texture.html
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
VERIFIED
FIXED
mozilla37
People
(Reporter: jrmuizel, Assigned: jrmuizel)
References
()
Details
(Keywords: crash, crashreportid)
Crash Data
Attachments
(1 file)
|
949 bytes,
patch
|
jgilbert
:
review+
Sylvestre
:
approval-mozilla-aurora-
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
The crash happens because we get a GL error back from glTexImage2D when we try to glTexImage2D a depth texture in EnsureNoUnitializedImageData. Uploading glTexImage2D is not supported with the ANGLE_depth_texture extension.
| Assignee | ||
Comment 1•11 years ago
|
||
Assignee: nobody → jmuizelaar
Attachment #8512990 -
Flags: review?(jgilbert)
Updated•11 years ago
|
Attachment #8512990 -
Flags: review?(jgilbert) → review+
Comment 2•11 years ago
|
||
I get crashes on https://www.khronos.org/registry/webgl/sdk/tests/conformance/extensions/webgl-depth-texture.html?webglVersion=1
Crash report:
https://crash-stats.mozilla.com/report/index/2bcc0bfe-fe3c-4c20-8d1e-618f62141204
https://crash-stats.mozilla.com/report/index/b612af38-501f-454f-8786-575d02141204
https://crash-stats.mozilla.com/report/index/9dab4280-133c-4bc4-9dfc-4ddc92141204
https://crash-stats.mozilla.com/report/index/63b1807b-afec-4a97-8227-b01382141204
https://crash-stats.mozilla.com/report/index/06d95a93-0637-4f4f-ad1b-ef05c2141201
Can we finally land this patch?
Severity: normal → critical
Crash Signature: [@ mozilla::WebGLTexture::EnsureNoUninitializedImageData(StrongGLenum<TexImageTargetDetails>, int) ]
Keywords: crash,
crashreportid
OS: Mac OS X → All
Hardware: x86 → All
Updated•11 years ago
|
Summary: Crash during 1.0.2 conformance/extensions/webgl-depth-texture.html → Crash during WebGL Conformance Tests - /extensions/webgl-depth-texture.html
Updated•11 years ago
|
Updated•11 years ago
|
Status: NEW → ASSIGNED
Comment 3•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Comment 5•11 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; rv:36.0) Gecko/20100101 Firefox/36.0
Report ID:
bp-e07b81a2-0389-4bcb-b80c-add4c2150113
Crash Report:
https://crash-stats.mozilla.com/report/index/e07b81a2-0389-4bcb-b80c-add4c2150113
Encountered this while testing Firefox 36 beta 1 (build ID: 20150112201205) on Windows 7 32-bit.
I was using 3 tabs, one with a youtube video and two with google maps.
Also, crashed it several times using the link from comment 2.
Crash reports:
https://crash-stats.mozilla.com/report/index/e7279934-42c8-4a1b-aa71-38a802150113
https://crash-stats.mozilla.com/report/index/4de4b3db-4900-4e3a-a867-e9e492150113
https://crash-stats.mozilla.com/report/index/2aee73aa-39fb-47dc-a173-20f832150113
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Updated•11 years ago
|
status-firefox36:
--- → affected
Comment 6•11 years ago
|
||
It was fixed on Firefox 37 only.
@ Jeff Muizelaar [:jrmuizel] - Can it be uplifted or it's too much risk?
status-firefox37:
--- → verified
Flags: needinfo?(jmuizelaar)
| Assignee | ||
Comment 7•11 years ago
|
||
Comment on attachment 8512990 [details] [diff] [review]
A Fix
Approval Request Comment
[Feature/regressing bug #]: Not sure if this is a regression or not, probably is.
[User impact if declined]: A crash on particular web content.
[Describe test coverage new/current, TBPL]: Has been on central for a while. Should be pretty low risk.
Flags: needinfo?(jmuizelaar)
Attachment #8512990 -
Flags: approval-mozilla-beta?
Attachment #8512990 -
Flags: approval-mozilla-aurora?
Comment 8•11 years ago
|
||
If 37 and 38 are fixed, the bug can be marked as fixed.
Status: REOPENED → RESOLVED
Closed: 11 years ago → 11 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Comment 9•11 years ago
|
||
Comment on attachment 8512990 [details] [diff] [review]
A Fix
aurora is 37, beta is 36.
Attachment #8512990 -
Flags: approval-mozilla-beta?
Attachment #8512990 -
Flags: approval-mozilla-beta+
Attachment #8512990 -
Flags: approval-mozilla-aurora?
Attachment #8512990 -
Flags: approval-mozilla-aurora-
Comment 10•11 years ago
|
||
status-firefox38:
fixed → ---
Updated•11 years ago
|
Flags: qe-verify+
Comment 11•11 years ago
|
||
I got this signature while navigating on google maps, FF 36b1 build2, Win 7 x86:
https://crash-stats.mozilla.com/report/index/efe87899-a704-45b4-9fa3-fbf442150115
Comment 12•11 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:36.0) Gecko/20100101 Firefox/36.0
Mozilla/5.0 (X11; Linux i686; rv:36.0) Gecko/20100101 Firefox/36.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:36.0) Gecko/20100101 Firefox/36.0
Verified issue fixed on Windows 7 64-bit, Ubuntu 14.04 32-bit and Mac OS X 10.9.5 with the link from comment 2 using Firefox 36 beta 2 (build ID: 20150120155007)
Comment 13•11 years ago
|
||
I encountered once this crash id on Aurora 37.0a2 20150205004014 under Windows Vista 32-bit while playing www.ro.me.
This website crashes more frequently with crash signature: OOM | large | mozalloc_abort(char const* const) | mozalloc_handle_oom(unsigned int) | moz_xcalloc | mozilla::WebGLTexture::EnsureNoUninitializedImageData(StrongGLenum<TexImageTargetDetails>, int) - bug 1129889.
Depends on: 1129889
Comment 14•11 years ago
|
||
I encountered this crash https://crash-stats.mozilla.com/report/index/72dfd7db-581b-41b3-80b8-4ba732150401 on Firefox 38 Beta 1 (20150330154247) using Windows 8.1 32bit. I can not precisely say what page crashed the browser because I had a lot of tabs opened, but I think it might be google maps.
Comment 15•11 years ago
|
||
Another crash report with Firefox 37.0.1 on Google Maps (user report / german support forum):
https://crash-stats.mozilla.com/report/index/b0d04f99-c769-496e-9142-36cdd2150404
Comment 16•11 years ago
|
||
Despite having scenario from comment 2 verified as fixed, the latest comments and Socorro [1] seem to indicate that this crash is still around.
Jeff do you think this warrants reopening this issue, or should the remaining crashes be tracked separately?
[1] - https://crash-stats.mozilla.com/report/list?product=Firefox&signature=mozilla%3A%3AWebGLTexture%3A%3AEnsureNoUninitializedImageData%28StrongGLenum%3CTexImageTargetDetails%3E%2C+int%29#tab-sigsummary
Flags: needinfo?(jmuizelaar)
Comment 18•11 years ago
|
||
Filed follow up bug 1151736.
You need to log in
before you can comment on or make changes to this bug.
Description
•