Bug 1090518 - Fix crash during webgl-depth-texture.html conformance test. r=jrmuizel, a=sledru

The crash happens because we get a GL error back from glTexImage2D when we try
to glTexImage2D a depth texture in EnsureNoUnitializedImageData. Uploading
glTexImage2D is not supported with the ANGLE_depth_texture extension. We need
to use the framebuffer path.